[metadata]
name = pyiceberg_helpers
description = A series
author = blackhat-hemsworth
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages =
    pyiceberg_helpers
install_requires =
    pyarrow>=18
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
pyiceberg_helpers = py.typed

[flake8]
max-line-length = 160